--- a/Aeropuertos.Infraestructura.API/appsettings.json
+++ b/Aeropuertos.Infraestructura.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AeropuertoContext":"Data Source=Aeropuerto.db"
+  }
 }
